tests/pos/simple/ambient-00.ts


declare var a: number;

declare function foo(n: number): void;

