tests/neg/todo/simple/fun-02a.ts

declare function baz(): number;
baz();
assert(false);
